# immortal_engine

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: generator.rs  lib.rs
crates/codegen/src/rust/: auth.rs  config.rs  handlers.rs  migrations.rs  mod.rs  models.rs  structs.rs
crates/codegen/src/templates/: mod.rs
crates/components/: Cargo.toml
crates/components/src/: definition.rs  lib.rs  registry.rs  traits.rs
crates/components/src/definitions/: api.rs  auth.rs  data.rs  logic.rs  storage.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ir/: Cargo.toml
crates/ir/src/: edge.rs  field.rs  graph.rs  group.rs  lib.rs  node.rs  port.rs  project.rs  serialization.rs  validation.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  dialogs.rs  lib.rs  palette.rs  properties.rs  state.rs  theme.rs  toolbar.rs  welcome.rs
crates/ui/src/canvas/: mod.rs
docs/: CHANGELOG.md  README.md  architecture.md  cli.md  components.md  getting-started.md  shortcuts.md  ui-guide.md
src/: main.rs
