[package]
name = "imortal-editor"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Kinuthia <kinuthiasteve098@gmail.com>"]
license = "MIT"
description = "Visual prototyping editor for Immortal Engine"

[[bin]]
name = "imortal-editor"
path = "src/main.rs"

[dependencies]
imortal_ir = { path = "crates/ir" }
imortal_ui = { path = "crates/ui" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/ir",
    "crates/components",
    "crates/codegen",
    "crates/ui",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stephen Kinuthia <kinuthiasteve098@gmail.com>"]
license = "MIT"
repository = "https://github.com/70-codes/immortal_engine"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Code generation
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"

# UI (egui ecosystem)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

# File system
walkdir = "2.0"
tempfile = "3.0"

# Internal crates
imortal_core = { path = "crates/core" }
imortal_ir = { path = "crates/ir" }
imortal_components = { path = "crates/components" }
imortal_codegen = { path = "crates/codegen" }
imortal_ui = { path = "crates/ui" }
