[package]
name = "imortal_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for Immortal Engine"

[[bin]]
name = "imortal"
path = "src/main.rs"

[dependencies]
# Internal crates
imortal_core.workspace = true
imortal_ir.workspace = true
imortal_components.workspace = true
imortal_codegen.workspace = true

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async
tokio.workspace = true
