[package]
name = "imortal_codegen"
description = "Code generation engine for Immortal Engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
imortal_core = { path = "../core" }
imortal_ir = { path = "../ir" }
imortal_components = { path = "../components" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Code generation
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
